@@ -227,8 +227,8 @@ dependencies {
     // MoPub Mediation Partners
     implementation 'com.applovin:applovin-sdk:9.14.8'
     implementation 'com.mopub.mediation:applovin:9.14.8.0'
-    implementation 'com.unity3d.ads:unity-ads:3.4.6'
-    implementation 'com.mopub.mediation:unityads:3.4.6.0'
+    implementation 'com.unity3d.ads:unity-ads:3.5.1'
+    implementation 'com.mopub.mediation:unityads:3.5.1.0'
 
     implementation files('libs/jlibtorrent-1.2.10.0.jar')
     implementation files('libs/jlibtorrent-android-arm-1.2.10.0.jar')
