@@ -1,5 +1,7 @@
 FrostWire 2.2.6 build 666 - NOV/20/2020
+ - com.mopub:mopub-sdk*:5.14.0 -> 5.15.0
  - com.mopub.mediation:applovin:9.14.3.0 -> 9.14.8.0
+ - com.unity3d.ads:unity-ads:3.4.6 -> 3.5.1
  - androidx.browser:browser: 1.3.0-alpha06 -> 1.3.0-rc01
  - dev:com.android.tools.build:gradle:4.1.0 -> 4.1.1
  - dev:com.google.firebase:firebase-crashlytics-gradle:2.3.0 -> 2.4.1
